[gd_scene load_steps=6 format=3 uid="uid://4jw5jbqiaoxc"]

[ext_resource type="Script" path="res://ParticleOption.gd" id="1_txa51"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pb747"]
bg_color = Color(0, 0, 0, 0.941176)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cpi1r"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i6x3i"]
bg_color = Color(0.180392, 0.180392, 0.180392, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1op3n"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(1, 1, 1, 1)
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="ParticleOption" type="Panel"]
custom_minimum_size = Vector2(1920, 64)
anchors_preset = -1
anchor_top = 0.940741
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 64.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_pb747")
script = ExtResource("1_txa51")
metadata/_edit_use_anchors_ = true

[node name="ParticlePreview" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 0.947917
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="ChangeStatus" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.825
anchor_right = 0.883333
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_cpi1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6x3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1op3n")
text = "已开启"
metadata/_edit_use_anchors_ = true

[node name="ChangeMode" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.883333
anchor_right = 0.941667
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_cpi1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6x3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1op3n")
text = "GPU"
metadata/_edit_use_anchors_ = true

[node name="Back" type="Button" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.941667
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2
theme_override_font_sizes/font_size = 33
theme_override_styles/normal = SubResource("StyleBoxFlat_cpi1r")
theme_override_styles/hover = SubResource("StyleBoxFlat_i6x3i")
theme_override_styles/pressed = SubResource("StyleBoxFlat_1op3n")
text = "返回"
metadata/_edit_use_anchors_ = true
